--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
   background-color: yellow;
 }
 
-h2 {
+/* h2 {
   width: 50%;
   box-shadow: 5px 5px 5px grey;
   text-decoration: overline;
@@ -58,4 +58,4 @@ h2 {
 
 .para {
   letter-spacing: 1em;
-}
+} */
